--- a/V5_DataPlugins/V5_Plugins.csproj
+++ b/V5_DataPlugins/V5_Plugins.csproj
@@ -21,7 +21,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>Bin\Debug\</OutputPath>
+    <OutputPath>..\Debug\V5_DataCollection\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <CodeAnalysisLogFile>bin\Debug\V5.DataPlugins.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
@@ -30,9 +30,10 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <OutputPath>Bin\Release\</OutputPath>
+    <OutputPath>..\Release\V5_DataCollection\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
@@ -58,8 +59,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IHandleLabel.cs" />
+    <Compile Include="IHandleUrl.cs" />
     <Compile Include="IKeyWord.cs" />
+    <Compile Include="IOutPutFormat.cs" />
     <Compile Include="IPublishContent.cs" />
+    <Compile Include="ISaveContent.cs" />
     <Compile Include="Model\ModelGatherItem.cs" />
     <Compile Include="IPlugin.cs" />
     <Compile Include="IPublish.cs" />
@@ -74,6 +79,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\V5_Model\V5_Model.csproj">
+      <Project>{5ff151c9-42a3-426b-bda4-65624dc25eaa}</Project>
+      <Name>V5_Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.102.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.102.0\build\net40\System.Data.SQLite.Core.targets')" />
